# RAG-Project

./: README.md  pyproject.toml  requirements.txt
notebook/: document.ipynb
