[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb==1.5.9",
    "ipykernel==7.2.0",
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.2",
    "numpy==1.26.4",
    "pymupdf==1.27.2.3",
    "pypdf==6.11.0",
    "sentence-transformers==5.5.1",
    "torch==2.2.0",
    "transformers==5.9.0",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
