[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "sentence-transformers<4.0.0",
    "torch==2.2.2",
    "transformers<5.0.0",
    "numpy<2.0.0",
    "chromadb",
    "langchain-huggingface",
    "onnxruntime<1.24.0",
]
